--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -4,6 +4,6 @@
   <title>A Compliment</title>
 </head>
 <body>
-    Hi {{ person }}! I think you're {{ compliment }}!
+    Hi {{ person }}! I think you're {{ compliment }}
 </body>
 </html>
