--- a/templates/hello.html
+++ b/templates/hello.html
@@ -10,6 +10,10 @@
 <form action="/greet">
   What is your name? <input type="text" name="person">
   <input type="submit">
+
+  <input type="radio" name="game_interest">
+  <label>Would you like to play a game?</label>
+
 </form>
 
 </body>
