--- a/templates/game2.html
+++ b/templates/game2.html
@@ -1,14 +1,10 @@
 <!doctype html>
 <html>
-<head>
-  <link rel="stylesheet" href="../static/madlibs.css">
-  <title>MadLibs</title>
-</head>
-<body>
-  <p class="grey">
-  There once was a {{ color }} {{ noun }} sitting in the Hackbright Lab.
-  When {{ person_madlib }} went to pick it up, it burst into flames in a totally
-  {{ adjective }} way. A very {{ shape }} {{ animal }} made a loud {{ sound }}. All of {{ place }} shook.
-</p></p>
-</body>
+  <head>
+    <link rel="stylesheet" href="../static/madlibs.css">
+    <title>Madlibs</title>
+  </head>
+  <body>
+    Il y a une petit {{animal}} qui est vraiment {{shape}}. Un jour il a passe par {{place}} et il fait une grosse {{sound}}.
+  </body>
 </html>
