--- a/templates/game_form.html
+++ b/templates/game_form.html
@@ -8,8 +8,10 @@
 
 <h1>Game Form</h1>
 
-<form action="/game_play" method="POST">
-  I need a color:<input type="text" name="color">
+
+<form action="/game_play">
+  <p>
+    I need a color:<input type="text" name="color">
   <br>
   Gimme a noun: <input type="text" name="noun">
   <br>
@@ -24,8 +26,9 @@
   Type of Animal? <input type="text" name="animal">
   <br>
   Place <input type="text" name="place">
+</p>
   <br>
-
+  
   <input type="submit">
 
 </form>
