--- a/templates/goodbye.html
+++ b/templates/goodbye.html
@@ -5,6 +5,6 @@
   <link rel="stylesheet" href="../static/madlibs.css">
 </head>
 <body>
-    So long, {{ person }}! I still think you're {{ compliment }}.
+    <p> So long, {{ person }}! I still think you're {{ compliment }}. </p>
 </body>
 </html>
