--- a/static/madlibs.css
+++ b/static/madlibs.css
@@ -5,7 +5,6 @@ body {
     word-spacing: 2px;
     color: #000000;
     font-weight: bold;
-    text-decoration: underline;
     font-style: normal;
     font-variant: normal;
     text-transform: none;
@@ -13,11 +12,16 @@ body {
 
 h1 {
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: greenyellow;
+    color: lightslategray;
 }
 
-.grey {
-    background-color: grey;
+p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:darkgreen;
+}
+
+.black {
+    background-color: rgb(17, 17, 17);
 }
 
 .pink {
